src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Manually populated, this field indicates the Affiliation this Campaign represents.</description>
        <inlineHelpText>Affiliation this Campaign represents.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>HED</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Appeal_Segment__c</fullName>
        <description>Giving level or operational area the Campaign is soliciting.</description>
        <inlineHelpText>Giving level or operational area the Campaign is soliciting.</inlineHelpText>
        <label>Appeal Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Operating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Planning and Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Underwriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Average_Gift_Hierarchy__c</fullName>
        <description>Total expected amount of gifts in the hierarchy divided by count of gifts in the hierarchy assuming it is a parent campaign</description>
        <formula>IF(AND(rC_Giving__Is_Parent__c), IF(HierarchyNumberOfOpportunities &gt; 0, rC_Giving__Expected_Giving_Amount_Hierarchy__c  /  HierarchyNumberOfOpportunities, NULL), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total expected amount of gifts in the hierarchy divided by count of gifts in the hierarchy</inlineHelpText>
        <label>Average Gift - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Average_Gift__c</fullName>
        <description>The expected giving amount total for the campaign divided by the number of giving records for the campaign</description>
        <formula>IF(NumberOfOpportunities &gt; 0, rC_Giving__Expected_Giving_Amount__c  /  NumberOfOpportunities, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Giving Amount divided by number of giving records</inlineHelpText>
        <label>Average Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount_Hierarchy__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of the amounts in the heirarchy you are likely to close per your Giving Stage configuration.</description>
        <inlineHelpText>Aggregated sum of the amounts in the heirarchy you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount__c</fullName>
        <description>Automatically populated field including amounts you are likely to close. See the Giving Stage configuration</description>
        <inlineHelpText>Amounts you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, rC_Giving__Best_Case_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Best_Case_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Best_Case_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Best_Case_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Category__c</fullName>
        <description>Assigned manually by the organization, this field is used for downstream analytics</description>
        <inlineHelpText>Assigned manually by the organization, this field is used for downstream analytics</inlineHelpText>
        <label>Campaign Category</label>
        <picklist>
            <picklistValues>
                <fullName>R1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Type__c</fullName>
        <description>Type of gifts the Campaign is soliciting.</description>
        <inlineHelpText>Type of gifts the Campaign is soliciting.</inlineHelpText>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Channel__c</fullName>
        <description>Method in which the Campaign will be communicated to constituents.</description>
        <inlineHelpText>Method in which the Campaign will be communicated to constituents.</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount_Hierarchy__c</fullName>
        <description>Gives the total closed amount from giving in the hierarchy</description>
        <inlineHelpText>Total of closed amount for the hierarchy</inlineHelpText>
        <label>Closed Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount__c</fullName>
        <description>Sum of closed giving amount for the campaign</description>
        <inlineHelpText>Sum of closed giving amount for the campaign</inlineHelpText>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Bar__c</fullName>
        <description>Formula field providing the percentage of closed amount from giving related to this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Closed_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Closed_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Closed_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of closed amount from giving related to this Campaign.</inlineHelpText>
        <label>Closed Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Ratio__c</fullName>
        <description>Formula field providing the percentage of closed amount from giving related to this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Closed_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of closed amount from giving related to this Campaign.</inlineHelpText>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount_Hierarchy__c</fullName>
        <description>Sum of committed giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of committed giving amount for the campaign hierarchy</inlineHelpText>
        <label>Commit Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount__c</fullName>
        <description>Sum of committed giving amount for the campaign</description>
        <inlineHelpText>Sum of committed giving amount for the campaign</inlineHelpText>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Bar__c</fullName>
        <description>Formula field providing the percentage of committed giving amount for this Campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Commit_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Commit_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Commit_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of committed giving amount for this Campaign.</inlineHelpText>
        <label>Commit Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Ratio__c</fullName>
        <description>Formula field providing the percentage of committed giving amount for this Campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Commit_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of committed giving amount for this Campaign.</inlineHelpText>
        <label>Commit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Gift__c</fullName>
        <description>Average cost per gift (number of won opportunities)</description>
        <formula>ActualCost/(if(NumberOfWonOpportunities&gt;0, NumberOfWonOpportunities, ActualCost))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average cost per gift</inlineHelpText>
        <label>Cost Per Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Piece_Hierarchy__c</fullName>
        <description>Actual cost per hierarchy divided by number sent in hierarchy</description>
        <formula>IF(HierarchyNumberSent &gt; 0, HierarchyActualCost / HierarchyNumberSent, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual cost per hierarchy divided by number sent in hierarchy</inlineHelpText>
        <label>Cost Per Piece - Hierarchy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Piece__c</fullName>
        <description>Cost divided by number sent</description>
        <formula>IF(NumberSent &gt; 0, ActualCost / NumberSent, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost divided by number sent</inlineHelpText>
        <label>Cost Per Piece</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Thousand_Hierarchy__c</fullName>
        <description>Actual cost of the hierarchy divided by number sent in hierarchy</description>
        <formula>IF(HierarchyNumberSent &gt; 0, HierarchyActualCost / (HierarchyNumberSent / 1000), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual cost of the hierarchy divided by number sent in hierarchy</inlineHelpText>
        <label>Cost Per Thousand - Hierarchy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Thousand__c</fullName>
        <description>Cost divided by number sent (in M)</description>
        <formula>IF(NumberSent &gt; 0, ActualCost / (NumberSent / 1000), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cost divided by number sent (in M)</inlineHelpText>
        <label>Cost Per Thousand</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Cost_Per_Won_Opportunity__c</fullName>
        <description>Actual cost divided by giving records</description>
        <formula>if(NumberOfWonOpportunities = 0, ActualCost, (ActualCost / NumberOfWonOpportunities))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual cost divided by giving records</inlineHelpText>
        <label>Cost Per Won Opportunity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Creative_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, this field shows a lookup to a Product related to this camoaign.</description>
        <inlineHelpText>Lookup to a Product related to this Campaign.</inlineHelpText>
        <label>Creative Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaigns (Creative Package)</relationshipLabel>
        <relationshipName>Campaigns_Creative_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount_Hierarchy__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts in the hierarchy with Stage: Open, Pending, Completed.</description>
        <inlineHelpText>Sum of all Giving Transaction amounts in the hierarchy  with Stage: Open, Pending, Completed.</inlineHelpText>
        <label>Current Giving Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts with Stage: Open, Pending, Completed.</description>
        <inlineHelpText>Sum of all Giving Transaction amounts with Stage: Open, Pending, Completed.</inlineHelpText>
        <label>Current Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Days_Since_Drop__c</fullName>
        <description>the number of days since the drop date</description>
        <formula>TODAY() - rC_Giving__Drop_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>the number of days since the drop date</inlineHelpText>
        <label>Days Since Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Direct_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>@Deprecated(version 2.36)</description>
        <inlineHelpText>If checked, Giving amounts from directly associated Gifts will rollup to the Campaign&apos;s amount tracking fields.</inlineHelpText>
        <label>@Deprecated(version 2.36)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Disable_Direct_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked,will disable roll up of Giving Amount information to Campaign roll up fields. Make sure “Disable Rollup Giving” field under Campaign Setting, custom setting is False.</description>
        <inlineHelpText>When checked, Giving amounts from directly associated Gifts will not rollup to the Campaign&apos;s amount tracking fields.</inlineHelpText>
        <label>Disable Direct Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Disable_Hierarchy_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked,will disable roll up of Giving amount information on Child Campaign to Parent Campaign.Make sure “Disable Update Metrics” field under Campaign Setting, custom setting is False</description>
        <inlineHelpText>When checked, Hierarchy Giving amounts from child Campaigns and Giving amounts from directly associated Gifts will not rollup to the Campaign&apos;s Hierarchy amount tracking fields.</inlineHelpText>
        <label>Disable Hierarchy Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Drop_Date__c</fullName>
        <description>date solicitation was made (mailed)</description>
        <inlineHelpText>date solicitation was made (mailed)</inlineHelpText>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Effort__c</fullName>
        <description>Manually populated field indicating the number of times correspondence has been sent this Campaign.</description>
        <inlineHelpText>Number of times correspondence has been sent this Campaign.</inlineHelpText>
        <label>Effort</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__End_Date_Time__c</fullName>
        <description>End Date and Time of Campaign.</description>
        <inlineHelpText>End Date and Time of Campaign.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount_Hierarchy__c</fullName>
        <description>The sum of the expected giving amount for all giving records related to this campaign</description>
        <inlineHelpText>Sum of expected giving amount for all associated giving records</inlineHelpText>
        <label>Expected Giving Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount__c</fullName>
        <description>Automatically populated, provides the sum of the expected giving amount for all giving records related to this campaign.</description>
        <inlineHelpText>Sum of expected giving amount for all associated giving records	related to this campaign.</inlineHelpText>
        <label>Expected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__External_ID__c</fullName>
        <description>@Deprecated(Version=2.12)</description>
        <inlineHelpText>@Deprecated(Version=2.12)</inlineHelpText>
        <label>@Deprecated(Version=2.12)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populated, this field indicates the General Accounting Unit where gifts and funds associated with this Campaign will be allocated by default.</description>
        <inlineHelpText>General Accounting Unit where gifts and funds associated with this Campaign will be allocated by default.</inlineHelpText>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type_Engine__c</fullName>
        <description>To override a Giving record&apos;s Giving Type Engine</description>
        <inlineHelpText>To override a Giving record&apos;s Giving Type Engine</inlineHelpText>
        <label>Giving Type Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type__c</fullName>
        <description>To override a Giving record&apos;s Giving Type, used in Public Media GTR</description>
        <inlineHelpText>To override a Giving record&apos;s Giving Type, used in Public Media GTR</inlineHelpText>
        <label>Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Hierarchy_Rollup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>@Deprecated(version 2.36)</description>
        <inlineHelpText>If checked, Hierarchy Giving amounts from child campaigns and Giving amounts from directly associated Gifts will rollup to the Campaign&apos;s Hierarchy amount tracking fields.</inlineHelpText>
        <label>@Deprecated(version 2.36)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a campaign has sub-campaigns associated with it or not</description>
        <inlineHelpText>Checked if campaign has sub-campaigns</inlineHelpText>
        <label>Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Campaign as a Shopper campaign.</description>
        <inlineHelpText>Designates Campaign as a Shopper campaign.</inlineHelpText>
        <label>Shopper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Net_Revenue_Hierarchy__c</fullName>
        <description>Expected giving amount minus actual cost for the hierarchy</description>
        <formula>rC_Giving__Expected_Giving_Amount_Hierarchy__c -  HierarchyActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount minus actual cost for the hierarchy</inlineHelpText>
        <label>Net Revenue - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Net_Revenue__c</fullName>
        <description>Expected giving amount minus actual cost</description>
        <formula>rC_Giving__Expected_Giving_Amount__c - ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected giving amount minus actual cost</inlineHelpText>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount_Hierarchy__c</fullName>
        <description>Sum of omitted giving amount for the campaign hierarchy</description>
        <inlineHelpText>Sum of omitted giving amount for the campaign hierarchy</inlineHelpText>
        <label>Omitted Amount - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount__c</fullName>
        <description>Sum of omitted giving amount for the campaign</description>
        <inlineHelpText>Sum of omitted giving amount for the campaign</inlineHelpText>
        <label>Omitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Bar__c</fullName>
        <description>Automatically populated, provides the percentage of omitted giving amount for the campaign.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, MIN(150, rC_Giving__Omitted_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Omitted_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Omitted_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of omitted giving amount for the campaign</inlineHelpText>
        <label>Omitted Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Ratio__c</fullName>
        <description>Automatically populated, provides the percentage of omitted giving amount for the campaign.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Omitted_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of omitted giving amount for the campaign.</inlineHelpText>
        <label>Omitted Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Percent_Goal_Hierarchy__c</fullName>
        <description>Percentage of Goal Attained for the hierarchy</description>
        <formula>if(rC_Giving__Is_Parent__c = True, if(HierarchyExpectedRevenue&gt;0,( rC_Giving__Expected_Giving_Amount_Hierarchy__c  / HierarchyExpectedRevenue ),null), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Goal Attained for the hierarchy</inlineHelpText>
        <label>Percent Goal - Hierarchy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>